<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="214dp"
        android:layout_height="226dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="99dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fuerza" />

    <EditText
        android:id="@+id/edtmasa"
        android:layout_width="240dp"
        android:layout_height="63dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="105dp"
        android:ems="10"
        android:hint="@string/masa"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.366"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/edtaceleracion"
        android:layout_width="240dp"
        android:layout_height="63dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="105dp"
        android:ems="10"
        android:hint="@string/aceleracion"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.366"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtmasa" />

    <Button
        android:id="@+id/btncalcular2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="149dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="150dp"
        android:text="@string/calcularfisica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtaceleracion" />

    <TextView
        android:id="@+id/txtresultado2"
        android:layout_width="231dp"
        android:layout_height="45dp"
        android:layout_marginStart="91dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="40dp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="91dp"
        android:layout_marginEnd="240dp"
        android:layout_marginBottom="17dp"
        android:text="@string/txtresultado"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtresultado2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>