<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Matematica">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="260dp"
        android:layout_height="224dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/geometria" />

    <EditText
        android:id="@+id/edtpunto1"
        android:layout_width="262dp"
        android:layout_height="62dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="74dp"
        android:hint="@string/punto1"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/edtpunto2"
        android:layout_width="265dp"
        android:layout_height="63dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="73dp"
        android:ems="10"
        android:hint="@string/punto2"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtpunto1" />

    <Button
        android:id="@+id/btncalcular1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="149dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="150dp"
        android:text="@string/calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtpunto2" />

    <TextView
        android:id="@+id/txtresultado1"
        android:layout_width="255dp"
        android:layout_height="64dp"
        android:textColor="@color/white"
        android:layout_marginStart="78dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btncalcular1"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="256dp"
        android:layout_marginBottom="10dp"
        android:text="@string/txtresultado"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtresultado1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btncalcular1" />

</androidx.constraintlayout.widget.ConstraintLayout>